Refactor: Explicitly defining columns and rows for chart data